--- a/src/features/MetalsChart/styles.module.css
+++ b/src/features/MetalsChart/styles.module.css
@@ -19,3 +19,29 @@
   align-items: center;
   justify-content: center;
 }
+
+.priceBlock {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  flex-direction: column;
+  position: absolute;
+  right: 5%;
+  bottom: 5%;
+}
+
+.diff {
+  font-size: 12px;
+  font-family: "Sansation-Bold", sans-serif;
+  color: rgba(37, 54, 211, 1);
+}
+
+.decreased {
+  color: rgba(253, 0, 0, 1);
+}
+
+.price {
+  font-size: 15px;
+  font-family: "Sansation", sans-serif;
+  color: #fff;
+}
