--- a/src/components/BlackBackgroundWrapper/styles.module.css
+++ b/src/components/BlackBackgroundWrapper/styles.module.css
@@ -4,7 +4,7 @@
   display: flex;
   /* align-items: center;*/
   justify-content: center;
-  padding: 20px 5%;
+  padding: 20px 5% 20vh;
   color: #fff;
 }
 
